# Volcano-Remote

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.sh  debug_swd.sh  flash.sh  flash_ota.sh  flash_swd.sh  pack_data.sh
.github/workflows/: cmake.yml  scad.yml
case/: case.scad  generate_stls.sh
conf/: Options.h  ffconf.h  lwipopts.h  memmap_custom.ld
data/: README.md  fonts.h
fs/: index.html
include/: ble.h  btstack_config.h  buttons.h  cache.h  config.h  console.h  crafty.h  debug_disk.h  fat_disk.h  http.h  image.h  lcd.h  lipo.h  log.h  logo.h  main.h  mem.h  menu.h  models.h  ring.h  serial.h  state.h  state_about.h  state_crafty.h  state_edit_workflow.h  state_scan.h  state_settings.h  state_string.h  state_value.h  state_venty.h  state_volcano_conf.h  state_volcano_run.h  state_volcano_workflow.h  state_wifi.h  state_wifi_edit.h  state_workflow.h  text.h  textbox.h  tusb_config.h  usb_descriptors.h  (+6 more)
python-test/: .gitignore  copy.sh  flow.py  lcd.py  poll.py  scan.py  state_connect.py  state_heat.py  state_notify.py  state_pump.py  state_scan.py  state_select.py  state_wait_temp.py  state_wait_time.py  states.py  workflows.py
src/: ble.c  buttons.c  cache.c  console.c  crafty.c  debug.c  debug_disk.c  fat_disk.c  http.c  http_files.c  http_socket.c  image.c  lcd.c  lipo.c  log.c  main.c  mem.c  memmap_custom.ld  menu.c  models.c  ota_shim.c  ring.c  serial.c  state.c  state_about.c  state_crafty.c  state_edit_workflow.c  state_scan.c  state_settings.c  state_string.c  state_value.c  state_venty.c  state_volcano_conf.c  state_volcano_run.c  state_volcano_workflow.c  state_wifi.c  state_wifi_edit.c  state_workflow.c  text.c  textbox.c  (+9 more)
test_bleak/: flow.py  poll.py
test_micropython/: copy.sh  lcd.py  ota.py  scan.py  state_connect.py  state_heat.py  state_notify.py  state_pump.py  state_scan.py  state_wait_time.py  workflows.py
test_simplepyble/: flow.py  scan.py
web-app/: fetch.sh
